--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+	"name": "casa",
+	"version": "0.1.0",
+	"description": "Casas tradicionais luso-brasileiras",
+	"keywords": ["casa", "galeria", "base de dados", "arquitetura tradicional"],
+	"author": "Pedro P. Palazzo",
+  "license": "CC_BY",
+	"main": "index.js",
   "dependencies": {
     "@11ty/eleventy": "^2.0.1",
     "bootstrap": "^5.3.2",
@@ -6,6 +13,7 @@
   },
   "scripts": {
 		"build": "npx @11ty/eleventy",
-    "start": "npx @11ty/eleventy --serve"
+    "start": "npx @11ty/eleventy --serve",
+    "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
