--- a/package.json
+++ b/package.json
@@ -2,18 +2,32 @@
 	"name": "casa",
 	"version": "0.1.0",
 	"description": "Casas tradicionais luso-brasileiras",
-	"keywords": ["casa", "galeria", "base de dados", "arquitetura tradicional"],
+	"keywords": [
+		"casa",
+		"galeria",
+		"base de dados",
+		"arquitetura tradicional"
+	],
 	"author": "Pedro P. Palazzo",
-  "license": "CC_BY",
+	"license": "CC_BY",
 	"main": "index.js",
-  "dependencies": {
-    "@11ty/eleventy": "^2.0.1",
-    "bootstrap": "^5.3.2",
-    "jquery": "^3.7.1"
-  },
-  "scripts": {
+	"dependencies": {
+		"@11ty/eleventy": "^2.0.1",
+		"@11ty/eleventy-fetch": "^4.0.0",
+		"@11ty/eleventy-img": "^3.1.8",
+		"@knight-lab/timelinejs": "^3.9.3",
+		"bootstrap": "^5.3.2",
+		"bootstrap-icons": "^1.11.3",
+		"jquery": "^3.7.1",
+		"leaflet": "^1.9.4",
+		"moment": "^2.30.1"
+	},
+	"scripts": {
 		"build": "npx @11ty/eleventy",
-    "start": "npx @11ty/eleventy --serve",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  }
+		"start": "npx @11ty/eleventy --serve",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"devDependencies": {
+		"node-sass": "^9.0.0"
+	}
 }
