--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
 	"license": "CC_BY",
 	"main": "index.js",
 	"dependencies": {
-		"@11ty/eleventy": "^2.0.1",
 		"@11ty/eleventy-fetch": "^4.0.0",
 		"@11ty/eleventy-img": "^3.1.8",
 		"@knight-lab/timelinejs": "^3.9.3",
@@ -28,6 +27,31 @@
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"devDependencies": {
-		"node-sass": "^9.0.0"
+		"@11ty/eleventy": "^2.0.1",
+		"eleventy-plugin-citeproc": "^0.1.3",
+		"html-minifier": "^4.0.0",
+		"markdown-it": "^14.0.0",
+		"markdown-it-abbr": "^2.0.0",
+		"markdown-it-attrs": "^4.1.6",
+		"markdown-it-block-embed": "^0.0.3",
+		"markdown-it-bracketed-spans": "^1.0.1",
+		"markdown-it-container": "^4.0.0",
+		"markdown-it-deflist": "^3.0.0",
+		"markdown-it-eleventy-img": "^0.10.1",
+		"markdown-it-footnote": "^4.0.0",
+		"markdown-it-gridtables": "^0.6.0",
+		"markdown-it-implicit-figures": "^0.12.0",
+		"markdown-it-imsize": "^2.0.1",
+		"markdown-it-include": "^2.0.0",
+		"markdown-it-katex": "^2.0.3",
+		"markdown-it-mathjax": "^2.0.0",
+		"markdown-it-pandoc": "^2.1.0",
+		"markdown-it-sub": "^2.0.0",
+		"markdown-it-sup": "^2.0.0",
+		"markdown-it-table": "^4.1.1",
+		"markdown-it-task-lists": "^2.1.1",
+		"markdown-it-texmath": "^1.0.0",
+		"node-sass": "^9.0.0",
+		"path": "^0.12.7"
 	}
 }
