--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
 	],
 	"author": "Pedro P. Palazzo",
 	"license": "CC_BY",
+	"repository": "arqtrad/casa",
 	"main": "index.js",
 	"dependencies": {
 		"@11ty/eleventy-fetch": "^4.0.0",
 		"@11ty/eleventy-img": "^3.1.8",
 		"@knight-lab/timelinejs": "^3.9.3",
+		"@popperjs/core": "^2.11.8",
 		"bootstrap": "^5.3.2",
 		"bootstrap-icons": "^1.11.3",
 		"jquery": "^3.7.1",
@@ -22,12 +24,21 @@
 		"moment": "^2.30.1"
 	},
 	"scripts": {
-		"build": "npx @11ty/eleventy",
-		"start": "npx @11ty/eleventy --serve",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"11ty": "npx @11ty/eleventy",
+		"dev": "npx @11ty/eleventy --serve",
+		"css": "npm-run-all css-compile css-prefix",
+		"css-compile": "sass --style compressed --source-map --embed-sources --no-error-css --load-path=node_modules scss/:assets/css/",
+		"css-lint": "stylelint scss/",
+		"css-prefix": "postcss --replace assets/css/styles.css --use autoprefixer --map",
+		"watch": "nodemon -e html,scss -x \"npm run css\"",
+		"start": "npm-run-all --parallel watch dev",
+		"build": "npm-run-all css 11ty",
+		"test": "npm-run-all css-lint css"
 	},
 	"devDependencies": {
 		"@11ty/eleventy": "^2.0.1",
+		"@11ty/eleventy-plugin-rss": "^1.2.0",
+		"autoprefixer": "^10.4.17",
 		"eleventy-plugin-citeproc": "^0.1.3",
 		"html-minifier": "^4.0.0",
 		"markdown-it": "^14.0.0",
@@ -51,7 +62,13 @@
 		"markdown-it-table": "^4.1.1",
 		"markdown-it-task-lists": "^2.1.1",
 		"markdown-it-texmath": "^1.0.0",
-		"node-sass": "^9.0.0",
-		"path": "^0.12.7"
+		"nodemon": "^3.0.3",
+		"npm-run-all": "^4.1.5",
+		"path": "^0.12.7",
+		"postcss": "^8.4.33",
+		"postcss-cli": "^11.0.0",
+		"sass": "^1.70.0",
+		"stylelint": "^16.2.1",
+		"stylelint-config-twbs-bootstrap": "^14.0.0"
 	}
 }
