--- a/package.json
+++ b/package.json
@@ -15,12 +15,10 @@
 	"dependencies": {
 		"@11ty/eleventy-fetch": "^4.0.0",
 		"@11ty/eleventy-img": "^3.1.8",
-		"@knight-lab/timelinejs": "^3.9.3",
 		"@popperjs/core": "^2.11.8",
 		"bootstrap": "^5.3.2",
 		"bootstrap-icons": "^1.11.3",
 		"jquery": "^3.7.1",
-		"leaflet": "^1.9.4",
 		"moment": "^2.30.1"
 	},
 	"scripts": {
@@ -39,6 +37,7 @@
 		"@11ty/eleventy": "^2.0.1",
 		"@11ty/eleventy-plugin-rss": "^1.2.0",
 		"autoprefixer": "^10.4.17",
+		"country-code-emoji": "^2.3.0",
 		"eleventy-plugin-citeproc": "^0.1.3",
 		"html-minifier": "^4.0.0",
 		"markdown-it": "^14.0.0",
