--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
 		"bootstrap": "^5.3.2",
 		"bootstrap-icons": "^1.11.3",
 		"jquery": "^3.7.1",
-		"moment": "^2.30.1"
+		"leaflet": "^1.9.4",
+		"moment": "^2.30.1",
+		"popper": "^1.0.1"
 	},
 	"scripts": {
 		"11ty": "npx @11ty/eleventy",
