--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
 		"country-code-emoji": "^2.3.0",
 		"eleventy-plugin-citeproc": "^0.1.3",
 		"html-minifier": "^4.0.0",
+		"js-yaml": "^4.1.0",
+		"luxon": "^3.4.4",
 		"markdown-it": "^14.0.0",
 		"markdown-it-abbr": "^2.0.0",
 		"markdown-it-attrs": "^4.1.6",
