--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@popperjs/core": "^2.11.8",
 		"bootstrap": "^5.3.2",
 		"bootstrap-icons": "^1.11.3",
+		"eleventy-plugin-dynamic-categories": "^0.1.5",
 		"jquery": "^3.7.1",
 		"leaflet": "^1.9.4",
 		"moment": "^2.30.1",
