--- a/src/_data/navigation.yml
+++ b/src/_data/navigation.yml
@@ -14,8 +14,8 @@ especiais:
     url       : /planalto/
     btn_class : "btn-outline-primary"
   - image_path: https://placehold.co/210x210/png
-    title     : "40 palmos"
-    excerpt   : "Difusão do módulo de 40 palmos de testada em Portugal nos séculos XIX e XX"
+    title     : "Quarenta palmos"
+    excerpt   : 'Difusão do módulo de 40 palmos de testada em Portugal nos séculos <span style="font-variant:all-small-caps">XIX</span> e <span style="font-variant:all-small-caps">XX</span>'
     url       : /40palmos/
     btn_class : "btn-outline-primary"
   - image_path: https://placehold.co/210x210/png
