--- a/src/_data/ui_text.yml
+++ b/src/_data/ui_text.yml
@@ -324,6 +324,12 @@ pt-BR:
   back_to_top                : "Voltar para o topo"
   load_all                   : "Carregar lista completa"
   page_not_found             : "Página não encontrada."
+  country:
+    AO: "Angola"
+    BR: "Brasil"
+    CV: "Cabo Verde"
+    PT: "Portugal"
+    UY: "Uruguai"
   type: # https://docs.citationstyles.org/en/stable/specification.html#appendix-iii-types
     article-journal          : "artigo em periódico"
     article-magazine         : "artigo em revista"
