--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"node-pandoc": "^0.3.0",
 		"nodemon": "^3.0.3",
 		"npm-run-all": "^4.1.5",
+		"pagefind": "^1.1.0",
 		"path": "^0.12.7",
 		"popper": "^1.0.1",
 		"postcss": "^8.4.33",
