Link para lista no cabeçalho

--- a/src/_data/navigation.yml
+++ b/src/_data/navigation.yml
@@ -3,6 +3,8 @@ main:
     url   : "https://tradicional.arq.br"
   - title : "Equipe"
     url   : "/equipe/"
+  - title : "Lista de casas"
+    url   : "/casa/"
   - title : '<i class="bi bi-github" aria-hidden="true"></i> Dados abertos e como contribuir'
     url   : "https://github.com/arqtrad/casa"
     target: "_blank"
