--- a/src/_data/ui_text.yml
+++ b/src/_data/ui_text.yml
@@ -324,6 +324,9 @@ pt-BR:
   back_to_top                : "Voltar para o topo"
   load_all                   : "Carregar lista completa"
   page_not_found             : "Página não encontrada."
+  # custom fields
+  author_reg_sg              : "Responsável"
+  author_reg_pl              : "Responsáveis"
   country:
     AO: "Angola"
     BR: "Brasil"
