Usa submódulo schemata

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "_scss"]
 	path = _scss
 	url = git@github.com:arqtrad/styles-bootstrap
+[submodule "src/_data/schemata"]
+	path = src/_data/schemata
+	url = https://github.com/arqtrad/schemata
