--- a/src/_data/site.yml
+++ b/src/_data/site.yml
@@ -3,7 +3,7 @@ locale                   : "pt-BR"
 title                    : "Casa"
 title_separator          : "-"
 subtitle                 : "tradicional luso-brasileira"
-name                     : "Pedro P. Palazzo"
+name                     : "Pedro P. Palazzo & equipe"
 description: >-
   Documentário da arquitetura cívica publicada na bibliografia de
   referência.
