--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"bootstrap": "^5.3.3",
 		"bootstrap-icons": "^1.11.3",
 		"country-code-emoji": "^2.3.0",
+		"csv-parse": "^5.6.0",
 		"jquery": "^3.7.1",
 		"js-yaml": "^4.1.0",
 		"leaflet": "^1.9.4",
