--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"postcss": "^8.4.33",
 		"postcss-cli": "^11.0.0",
 		"sass": "^1.70.0",
+		"sharp": "^0.33.5",
 		"stylelint": "^16.2.1",
 		"stylelint-config-twbs-bootstrap": "^14.0.0"
 	}
