Lista de desenhos funcionando

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"css-compile": "sass --style compressed --source-map --embed-sources --no-error-css --load-path=node_modules _scss/:assets/css/",
 		"css-lint": "stylelint _scss/",
 		"css-prefix": "postcss --replace assets/css/main.css --use autoprefixer --map",
-		"watch": "nodemon -e html,scss -x \"npm run css\"",
+		"watch": "nodemon --delay 3 -e html,scss -x \"npm run css\"",
 		"start": "npm-run-all --parallel watch dev",
 		"build": "npm-run-all css 11ty",
 		"test": "npm-run-all css-lint css"
