--- a/src/_data/navigation.yml
+++ b/src/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
   - title : "Sobre o projeto"
     url   : "https://tradicional.arq.br"
   - title : "Equipe"
-    url   : "/equipe/"
+    url   : "https://tradicional.arq.br/equipe/"
   - title : '<i class="bi bi-github" aria-hidden="true"></i> Dados abertos e como contribuir'
     url   : "https://github.com/arqtrad/casa"
     target: "_blank"
