--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,6 @@
-[submodule "src/_includes"]
-	path = _includes
-	url = git@github.com:arqtrad/eleventy-includes
-[submodule "_scss"]
-	path = _scss
-	url = git@github.com:arqtrad/styles-bootstrap
 [submodule "src/_data/schemata"]
 	path = src/_data/schemata
-	url = https://codeberg.org/tradicional/schemata.git
+	url = ssh://git@codeberg.org/tradicional/schemata.git
+[submodule "tools"]
+	path = tools
+	url = ssh://git@codeberg.org/tradicional/site-tools.git
