--- a/.github/workflows/eleventy-gh-pages.yml
+++ b/.github/workflows/eleventy-gh-pages.yml
@@ -24,14 +24,14 @@ concurrency:
 jobs:
   # Build job
   build:
-    runs-on: macos-13
+    runs-on: macos-15
     steps:
       - name: Install pandoc
         run: |
           brew update
-          brew install pandoc pandoc-crossref jez/formulae/pandoc-sidenote
+          brew install pandoc pandoc-crossref
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
         with:
           lfs: "true"
           submodules: "recursive"
@@ -40,7 +40,7 @@ jobs:
           npm install
           npm run build
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+        uses: actions/upload-pages-artifact@v4
 
   # Deployment job
   deploy:
@@ -49,7 +49,7 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: build
-    if: github.event_name == 'push' && github.repository == 'arqtrad/casa'
+    if: github.event_name == 'push'
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
